--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "method-override": "^3.0.0",
+    "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1"
   }
 }
