--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express-handlebars": "^7.1.2",
     "method-override": "^3.0.0",
     "mongoose": "^7.5.0",
+    "mongoose-paginate-v2": "^1.7.31",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2"
   }
