--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "mongoose": "^7.5.0",
     "mongoose-paginate-v2": "^1.7.31",
@@ -12,5 +14,9 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "scripts": {
+    "dev": "nodemon src/index.js",
+    "start": "node src/server.js"
   }
 }
